# auto-researcher

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  config.docker.yaml  config.yaml  docker-compose.yml  main.py  pyproject.toml  setup.md  system_prompt.txt
coordinator/: coordinator.py  decomposer.py
dashboard/: index.html
memory/: semantic.py
models/: client.py  registry.py
server/: app.py  events.py  permissions.py
shared/: types.py
subagent/: context.py  subagent.py
tools/: danger.py  runtime.py
tools/builtin/: __init__.py  files.py  notify.py  search.py  shell.py  web.py
user_tools/: test.py
