[project]
name = "auto-researcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=23.2.1",
    "asyncio-throttle>=1.0.2",
    "fastapi>=0.111.0",
    "gitpython>=3.1.43",
    "httpx>=0.27.0",
    "lancedb>=0.8.0",
    "pyarrow>=15.0.0",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0.1",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
]

[dependency-groups]
dev = [
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]
